<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/phoneNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_numtel" />
    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/example_number"
        android:inputType="phone"
        android:autofillHints=""
        android:digits="0123456789+"
        android:maxLength="15"
        android:layout_marginBottom="12sp"/>

    <TextView
        android:id="@+id/codeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_code" />
    <EditText
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/example_code"
        android:inputType="numberPassword"
        android:autofillHints=""
        android:maxLength="6"
        android:digits="0123456789"/>

</LinearLayout>
